RaceDay Computations complete

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,4 +106,4 @@ add_executable(COS214_Project
         Unprepared.cpp
         Unprepared.h
         Weather.cpp
-        Weather.h)
+        Weather.h Tyres.cpp Tyres.h)
