--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ add_executable(COS214_Project
         Bahrain.cpp
         Bahrain.h
         Base_Car.h
+        Base_Car_Measurements.cpp
+        Base_Car_Measurements.h
         BluePrint.cpp
         BluePrint.h
         Car_factory.cpp
@@ -32,6 +34,8 @@ add_executable(COS214_Project
         Component.h
         Conc_Radio_System.cpp
         Conc_Radio_System.h
+        Concrete_Base_Car_Measurements.cpp
+        Concrete_Base_Car_Measurements.h
         Conservative.cpp
         Conservative.h
         Department.cpp
@@ -48,6 +52,7 @@ add_executable(COS214_Project
         Engineering_Stage.h
         Experienced.cpp
         Experienced.h
+        Individual_Component.h
         main.cpp
         Moderate.cpp
         Moderate.h
@@ -61,6 +66,10 @@ add_executable(COS214_Project
         Opposing_Driver.h
         Opposing_Team.cpp
         Opposing_Team.h
+        Overall.cpp
+        Overall.h
+        Performance_Indicator.cpp
+        Performance_Indicator.h
         Pit_Crew.cpp
         Pit_Crew.h
         Pit_Stop.cpp
@@ -106,4 +115,4 @@ add_executable(COS214_Project
         Unprepared.cpp
         Unprepared.h
         Weather.cpp
-        Weather.h)
+        Weather.h Individual_Component.cpp)
