--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,4 +114,4 @@ add_executable(COS214_Project
         Unprepared.cpp
         Unprepared.h
         Weather.cpp
-        Weather.h)
+        Weather.h Testing_Stage.cpp)
